--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello world
+ <!DOCTYPE html>
+<html>
+<head>
+<title>Siddharth Srivastava</title>
+</head>
+<body>
+
+<h1>Siddharth Srivastava</h1>
+<p></p>
+
+</body>
+</html> 
