--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Siddharth Srivastava</title>
+<link rel="shortcut icon" href="~/Desktop/siddsrivastava.github.io/favicon_io/favicon.ico"/>
 </head>
 <body>
 
