--- a/index.html
+++ b/index.html
@@ -1,13 +1,54 @@
  <!DOCTYPE html>
 <html>
-<head>
+<head profile="https://siddsrivastava.github.io">
+
+<link rel="icon" href="favicon.ico/favicon.ico" type="favicon.ico/favicon.ico" />
+
 <title>Siddharth Srivastava</title>
-<link rel="shortcut icon" href="https://siddsrivastava.github.io/favicon.ico"/>
+ <style>
+
+body {
+ font-family: Century Gothic, sans-serif;
+ color: #333333;
+}
+
+h1 {
+  font-size: 35px;
+}
+
+h4 {
+  font-size: 20px;
+}
+
+p {
+  font-size: 15px;
+}
+
+</style>
 </head>
 <body>
 
 <h1>Siddharth Srivastava</h1>
-<p></p>
+<p> <i>
+Robots, Rockets and Half-Dead Cats.
+</i></p>
 
+<a href="research/research.html">Research</a> <&nbsp> <a href="bookshelf.html">Bookshelf</a> <&nbsp> <a href="projects/projects.html">Projects</a> <&nbsp> <a href="internships/internships.html">Work</a>  
+
+<p>I'm a third-year undergraduate student and researcher at Maharashtra Institute of Technology - World Peace University, Pune. I spend my time thinking about how to model intelligence and perception algorithmically (and algebraically!).<br/><br/>Outside of the lab, I love playing the guitar, writing and getting kicked out of family events because I talk about quantum physics a lot. <br/></p>
+
+<br/>
+<h4>Contact (I prefer emails if you want to get in touch, thanks!)</h4>
+<b>Email: </b> srivastava41099@gmail.com <br/>
+<b>Linkedin: </b> <a href="https://www.linkedin.com/in/siddharthsrivastava4">Siddharth Srivastava</a> <br/>
+<b>Github: </b> <a href="https://www.github.com/siddsrivastava">siddsrivastava</a> <br/>
+<b>Twitter: </b> <a href="https://www.twitter.com/siddharthvaderr">siddharthvaderr</a> <br/>
+
+<br/>
+<h4>Blog</h4>
+I am in the process of uploading my thoughts and musings here, it should be done by end of january 2020. Till then you can visit my blog at <a href="https://www.medium.com/@srivastava41099">medium</a>. Thanks! <br/>
+<br/>
+<h4>Media</h4>
+<img src="ns.jpeg" alt="NSSC 2018" height="400" width="550"> 
 </body>
 </html> 
