--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ Robots, Rockets and Half-Dead Cats.
 <p>I'm a third-year undergraduate student and researcher at Maharashtra Institute of Technology - World Peace University, Pune. I spend my time thinking about how to model intelligence and perception algorithmically (and algebraically!).<br/><br/>Outside of the lab, I love playing the guitar, writing and getting kicked out of family events because I talk about quantum physics a lot. <br/></p>
 
 <br/>
-<h4>Contact (I prefer emails if you want to get in touch, thanks!)</h4>
+<h4>Contact</h4>
 <b>Email: </b> srivastava41099@gmail.com <br/>
 <b>Linkedin: </b> <a href="https://www.linkedin.com/in/siddharthsrivastava4">Siddharth Srivastava</a> <br/>
 <b>Github: </b> <a href="https://www.github.com/siddsrivastava">siddsrivastava</a> <br/>
