Adding home button

--- a/bookshelf.html
+++ b/bookshelf.html
@@ -27,6 +27,8 @@ p {
 </head>
 <body>
 
+<a href="index.html"> Home </a> <br/> <br/>
+
 <h1>Bookshelf</h1>
 An inexhaustive list (in no particular order) of all the books I've been reading and highly recommend. The ones in bold are in my all time favourites! <br/> 
 
@@ -70,7 +72,7 @@ An inexhaustive list (in no particular order) of all the books I've been reading
 ◦ Energy: A Begineer's Guide - Vaclav Smil<br/>
 ◦ Measure what matters - John Doerr<br/>
 ◦ Capitalism and Freedom - Milton Friedman<br/>
-◦ <b>Seven brief lessons on Physics</b><br/>
+◦ <b>Seven brief lessons on Physics - Carlo Rovelli</b><br/>
 ◦ The Physics of Everyday Things - James Kaklios<br/>
 ◦ <b>Life 3.0 - Max Tegmark</b><br/>
 ◦ A Short History of Nearly Everything - Bill Bryson<br/>
