--- a/projects/projects.html
+++ b/projects/projects.html
@@ -27,6 +27,8 @@ p {
 </head>
 <body>
 
+<a href="../index.html"> Home </a> <br/> <br/>
+
 <h1>Projects</h1>
 <p>Following is (an incomplete) list of my projects: <br/></p>
 
