--- a/internships/internships.html
+++ b/internships/internships.html
@@ -27,6 +27,8 @@ p {
 </head>
 <body>
 
+<a href="../index.html"> Home </a> <br/> <br/>
+
 <h1>Work Experience</h1>
 Listing some of my internships and work (associated with various organizations) here. All logos displayed on this page are property of the respective organizations.
 <br/><br/><br/>
