--- a/research/research.html
+++ b/research/research.html
@@ -27,6 +27,8 @@ p {
 </head>
 <body>
 
+<a href="../index.html"> Home </a> <br/> <br/>
+
 <h1>Research and Publications</h1>
 <p>My current work spans across Artificial Intelligence and Cognitive Science. My areas of interest are: Computer Vision, Intelligent Decision-Making, AI Safety, Reinforcement Learning and Theoretical Deep Learning. <br/>
 If you have an interesting problem that you want to work with me on, feel free to reach out to me. Contact details are on the home page. <br/> 
