--- a/internships/internships.html
+++ b/internships/internships.html
@@ -36,7 +36,7 @@ Listing some of my internships and work (associated with various organizations) 
 <h3>Junior Machine Learning Engineer - Omdena </h3>
 <img src="om.png" alt="Omdena logo" height="100" width="250" align="left" hspace=20> 
 Amongst the 35 engineers from over 24 countries working on mitigating the African energy crisis. <br/>
-Worked with RA 365, a Nigerian NGO to leverage Artificial Intelligence for developing solutions and providing renewable energy solutions to the Nigerian communities. <br/> Some of our core work included: <br/>
+Worked with RA 365, a Nigerian NGO to leverage Artificial Intelligence for developing solutions and providing renewable energy to the Nigerian communities. <br/> Some of our core work included: <br/>
 ◦ Creating heatmaps to track areas with lack of energy and potential places to install solar panels <br/>
 ◦ Classifying regions based on solar irradiance and panel PPI
 <br/>
