--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ p {
 
 <h1>Siddharth Srivastava</h1>
 <p> <i>
-Robots, Rockets and Half-Dead Cats.
+Robots, Rockets and Quantum Cats.
 </i></p>
 
 <p>
