--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@ Robots, Rockets and Quantum Cats.
 <a href="research/research.html">Research</a> <&nbsp> <a href="bookshelf.html">Bookshelf</a> <&nbsp> <a href="projects/projects.html">Projects</a> <&nbsp> <a href="internships/internships.html">Work</a>  
 </p>
 
+ <h2>I have moved to www.sidsrivastava.me <br/> Visit me there! </h2>
+ 
 <p>I'm a third-year undergraduate student and researcher at Maharashtra Institute of Technology - World Peace University, Pune. I spend my time thinking about how to model intelligence and perception algorithmically (and algebraically!).<br/><br/>Outside of the lab, I love playing the guitar, writing and getting kicked out of family events because I talk about quantum physics a lot. <br/></p>
 
 <br/>
